# Substack2Markdown

./: pyproject.toml
