[project]
name = "substack2markdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4==0.0.1",
    "html2text==2020.1.16",
    "markdown==3.6",
    "requests==2.31.0",
    "selenium==4.16.0",
    "tqdm==4.66.1",
    "webdriver-manager==4.0.1",
]
